[package]
name = "block-ips-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-multipart = {version = "0.6.0", features = ["derive"]  }
actix-session = { version = "0.7.2", features = ["cookie-session", "redis-actor-session"] }
actix-web = "4.3.1"
cookie = "0.17.0"
futures-util = "0.3.28"
lazy_static = "1.4.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }

