[package]
name = "block-ips-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-http = "3.3.1"
actix-multipart = {version = "0.6.0", features = ["derive"]  }
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = { version = "4.3.1", default-features = false, features = ["cookies", "secure-cookies", "macros"] }
bcrypt = "0.15.0"
cookie = "0.17.0"
env_logger = "0.10.0"
futures-util = "0.3.28"
lazy_static = "1.4.0"
log = "0.4.19"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }

